<resources>
    <string name="app_name">Espresso</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="webview">js</string>
    <string name="list">list</string>
    <string name="chart">chart</string>
    <string name="title_activity_webview">Webview</string>
    <string name="pic">pic</string>
    <string name="line">lineChart</string>
    <string name="description">description</string>
    <string name="app_description">A sample application that allows you to navigate a simple line graph using touch gestures.</string>
    <string name="action_zoom_in">Demo zoom in</string>
    <string name="action_zoom_out">Demo zoom out</string>
    <string name="action_pan_left">Demo pan left</string>
    <string name="action_pan_right">Demo pan right</string>
    <string name="action_pan_up">Demo pan up</string>
    <string name="action_pan_down">Demo pan down</string>
    <string name="limit">limit</string>
    <string name="gradient">gradient</string>
</resources>
