<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_webview"
        android:orderInCategory="100"
        android:title="@string/webview"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_list"
        android:orderInCategory="100"
        android:title="@string/list"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_chart"
        android:orderInCategory="100"
        android:title="@string/chart"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_pic"
        android:orderInCategory="100"
        android:title="@string/pic"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_line"
        android:orderInCategory="100"
        android:title="@string/line"
        app:showAsAction="never" />
</menu>
